<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout 
	    android:orientation="vertical"
		android:layout_width="match_parent" 
		android:layout_height="match_parent">
		<TabWidget 
		    android:id="@android:id/tabs"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" />
		<FrameLayout 
		    android:id="@android:id/tabcontent"
			android:layout_width="match_parent" 
			android:layout_height="match_parent">
			<ListView 
			    android:id="@+id/restaurants"
				android:layout_width="match_parent" 
				android:layout_height="match_parent" />
			<ScrollView 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<TableLayout 
				    android:id="@+id/details"
					android:layout_width="match_parent" 
					android:layout_height="wrap_content"
					android:stretchColumns="1" 
					android:shrinkColumns="1"
					android:paddingTop="4dip">
					<TableRow>
						<TextView android:text="@string/name_label" />
						<EditText android:id="@+id/name" />
					</TableRow>
					<TableRow>
						<TextView android:text="@string/address_label" />
						<EditText android:id="@+id/addr" />
					</TableRow>
					<TableRow>
						<TextView android:text="@string/type_label" />
						<RadioGroup android:id="@+id/types">
							<RadioButton android:id="@+id/take_out" android:text="@string/take_out_text"	android:checked="true" />
							<RadioButton android:id="@+id/sit_down" android:text="@string/sit_down_text" />
							<RadioButton android:id="@+id/delivery" android:text="@string/delivery_text" />
						</RadioGroup>
					</TableRow>
					<TableRow>
						<TextView android:text="@string/notes_label" />
						<EditText 
						    android:id="@+id/notes" 
						    android:inputType="textMultiLine"
							android:gravity="top" 
							android:lines="2"
							android:scrollHorizontally="false" 
							android:maxLines="2" />
					</TableRow>
					<Button 
					    android:id="@+id/save" 
					    android:layout_width="match_parent"
						android:layout_height="wrap_content" 
						android:text="@string/save_label" />
				</TableLayout>
			</ScrollView>
		</FrameLayout>
	</LinearLayout>
</TabHost>